infrastructure/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    ingressclass.kubernetes.io/nginx: "true"
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: tickets.dev
      http: 
        paths:
          - path: /api/users
            backend:
              serviceName: auth-service 
              servicePort: 3000
